bound event to different class for slideDown on long_desc updated save call to display the proper helper text if null long_desc

--- a/riotoustools/static/dayzero.css
+++ b/riotoustools/static/dayzero.css
@@ -47,3 +47,8 @@
     font-style: italic;
     display: inline-block;
 }
+.day-zero-item-add {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
